err/sensei2.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/autoslug'...
Listing './lib/python3.5/site-packages/django_autoslug-1.9.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytils'...
Listing './lib/python3.5/site-packages/pytils/templatetags'...
Listing './lib/python3.5/site-packages/pytils/test'...
Listing './lib/python3.5/site-packages/pytils/test/templatetags'...
Listing './lib/python3.5/site-packages/pytils/third'...
Listing './lib/python3.5/site-packages/pytils-0.3.egg-info'...
Listing './lib/python3.5/site-packages/sensei2'...
Listing './lib/python3.5/site-packages/sensei2/management'...
Listing './lib/python3.5/site-packages/sensei2/management/commands'...
Compiling './lib/python3.5/site-packages/sensei2/management/commands/fill.py'...
***   File "./lib/python3.5/site-packages/sensei2/management/commands/fill.py", line 13
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sensei2/plugins'...
Compiling './lib/python3.5/site-packages/sensei2/plugins/youtube.py'...
***   File "./lib/python3.5/site-packages/sensei2/plugins/youtube.py", line 12
    print "Download latest youtube video.."
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sensei2/sensei'...
Listing './lib/python3.5/site-packages/sensei2/sensei/fill_data'...
Listing './lib/python3.5/site-packages/sensei2/sensei/fill_data/result'...
Compiling './lib/python3.5/site-packages/sensei2/sensei/fill_data/vesna.py'...
***   File "./lib/python3.5/site-packages/sensei2/sensei/fill_data/vesna.py", line 31
    re_main_search = re.compile(ur'color:black; margin-left:0;"\>([^\<]+)\<\/h1\>\s*\<p\>(.*?)\<\/div\>', re.MULTILINE | re.DOTALL | re.UNICODE)
                                                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sensei2/sensei/handlers'...
Compiling './lib/python3.5/site-packages/sensei2/sensei/handlers/base.py'...
***   File "./lib/python3.5/site-packages/sensei2/sensei/handlers/base.py", line 46
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sensei2/sensei/handlers/text.py'...
***   File "./lib/python3.5/site-packages/sensei2/sensei/handlers/text.py", line 98
    print 'Field type IPAddressField is deprecated. Use GenericIPAddressField instead'
                                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sensei2/sensei/sensei_room.py'...
***   File "./lib/python3.5/site-packages/sensei2/sensei/sensei_room.py", line 33
    print "Start for %s.%s" % (rule['app'], rule['model'])
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sensei2-1.1.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
